[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramms-tools"
version = "0.1.0"
description = "Python tools for interacting with RAMMS-based Unreal Engine projects via Remote Control API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
tui = ["textual>=8.0.0"]
compression = ["Pillow>=10.0.0", "lz4>=4.0.0"]
exr = ["OpenEXR>=3.0.0", "imath>=0.0.1"]
all = ["textual>=8.0.0", "Pillow>=10.0.0", "lz4>=4.0.0", "OpenEXR>=3.0.0", "imath>=0.0.1"]

[project.scripts]
ramms-pose = "ramms_tools.scripts.control_pose:main"
ramms-stream = "ramms_tools.scripts.stream_video:main"
ramms-gripper = "ramms_tools.scripts.control_gripper:main"
ramms-kinova = "ramms_tools.scripts.control_kinova:main"
ramms-mebot = "ramms_tools.scripts.control_mebot:main"
ramms-notify = "ramms_tools.scripts.send_notification:main"
ramms-status = "ramms_tools.scripts.set_status:main"
ramms-imu = "ramms_tools.scripts.stream_imu:main"
ramms-stream-test = "ramms_tools.scripts.stream_test:main"
ramms-tui = "ramms_tools.scripts.tui:main"

[tool.setuptools.packages.find]
where = ["src"]
